--- a/_sass/suci/components/_navbar.scss
+++ b/_sass/suci/components/_navbar.scss
@@ -2,6 +2,7 @@
   background-color: black;
   color: white;
   padding: 8px;
+  margin-bottom: 32px;
 
 
   &__nav {
